--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@
   box-sizing: border-box;
 }
 
-body{
-    padding: 1rem;
+body {
+  padding: 1rem;
 }
 
 .body {
-  background-color: #01010190;
-  color: white;
+    /* background-color: #C9E7D3; */
+    box-shadow: 2px 2px 10px #33363450;
+  /* background-color: #01010190;
+  color: white; */
   border: 1px solid #d3d3d370;
   border-radius: 10px;
   height: fit-content;
@@ -28,7 +30,7 @@ body{
 .header .profile-img {
   /* border: 1px solid red; */
   height: 30rem;
-  padding: 2rem;
+  padding: 1rem;
 }
 .profile-img img {
   border-radius: 10px;
@@ -40,7 +42,7 @@ body{
 .card-body {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1rem;
   /* flex: 2; */
 }
 
@@ -52,6 +54,22 @@ body{
 
 .detail label {
   font-weight: bold;
+}
+
+.links {
+  padding-block: 1.5em;
+  text-align: center;
+}
+#link {
+  /* border: 1px solid red; */
+  border-radius: 10rem;
+  padding: .5rem 1rem;
+  background: lightblue;
+  text-decoration: none;
+}
+
+#time{
+    font-size: small;
 }
 
 @media screen and (min-width: 1240px) {
