--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ body {
   text-decoration: none;
 }
 
-#time{
+/* #time{
     font-size: small;
-}
+} */
 
 @media screen and (min-width: 1240px) {
 }
